--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "supermall1",
+  "name": "supermall",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
